# Project0-Getting-Started

./: .gitignore  INSTRUCTION.md  Nsight_Compute_report.ncu-rep  README.md  compute.txt.ncu-rep  nsight_output.txt.ncu-rep  webgpureport-2024-08-30T23-12-21-480Z.txt
cuda-getting-started/: .gitignore  CMakeLists.txt  CMakeLists_Backup.txt  cis5650_getting_started.sln  cis5650_getting_started.vcxproj  cis5650_getting_started.vcxproj.filters
cuda-getting-started/buildVS2019/: cis5650_getting_started.sln  cis565_getting_started.sln
cuda-getting-started/cmake/: CUDAComputesList.cmake
cuda-getting-started/src/: CMakeLists.txt  kernel.cu  main.cpp
images/: Thumbs.db  out.ncu-rep  repo.txt.ncu-rep
reports/: about-gpu.txt  nsight_compute_output.ncu-rep  webgpureport.txt
